<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prueba</string>
    <string name="hello_world">Hello world!</string>
    <string name="center">Centrado</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">Boton1</string>
    <string name="btn9">Boton1</string>
    <string name="cargar">Cargar datos</string>
    <string name="camera">Tomar foto</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="opc1">Opcion 1</string>
    <string name="opc2">Opcion 2</string>
    <string name="listar">Mostrar resultados</string>
    <string name="act7">Soy la actividad 7</string>
    <string name="act8">Soy la actividad 8</string>
    <string name="icono_uneg">icono uneg</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="title_activity_activity4">Activity4</string>
    <string name="title_activity_activity5">Activity5</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="title_activity_activity6">Activity6</string>
    <!-- Lista de titulos de navegacion -->
    <string-array name="nav_options">
        <item>Perfil</item>
        <item>Favoritos</item>
        <item>Eventos</item>
        <item>Lugares</item>
        <item>Etiquetas</item>
        <item>Configuración</item>
        <item>Compartir</item>
    </string-array>
    <!-- Lista de iconos de navegacion -->
    <array name="navigation_iconos">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_star</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_place</item>
        <item>@drawable/ic_action_labels</item>
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_share</item>
    </array>

    <string name="title_activity_activity7">Activity7</string>
    <string name="title_activity_activity8">Activity8</string>

</resources>
