<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Principal">

    <TextView android:id="@+id/Hello"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/center"
        android:text="@string/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Hello"
        android:layout_centerInParent="true"/>

    <EditText android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center"
        android:inputType="text" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:drawableRight="@drawable/logouneg"/>

    <ToggleButton android:id="@+id/btn2"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="10dp"/>

    <ImageButton android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icono_uneg"
        android:src="@drawable/logouneg"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:layout_toLeftOf="@id/btn1"/>

</RelativeLayout>
