<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pack.daniela.pueba2.Activity2">

    <TextView android:id="@+id/hw"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner android:id="@+id/CmbOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hw"/>

    <TextView android:id="@+id/center2"
        android:text="@string/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/CmbOpciones"
        android:layout_centerInParent="true"/>

    <ListView android:id="@+id/LstOpciones"
        android:layout_width="wrap_content"
        android:layout_height="450px"
        android:layout_below="@id/center2"/>

    <Button android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
